<resources>
    <string name="app_name">A2_011078NEW</string>
    <string name="title">Lab A2 - Đồng hồ bấm giờ</string>
    <string name="student">MSSV: 231A011078</string>
    <string name="zero_time">00:00.0</string>
    <string name="status_paused">Tạm dừng</string>
    <string name="status_running">Đang chạy</string>
    <string name="start">Bắt đầu</string>
    <string name="pause">Tạm dừng</string>
    <string name="reset">Đặt lại</string>
</resources>